[gd_scene load_steps=6 format=3 uid="uid://cei4euf0ujv82"]

[ext_resource type="Texture2D" uid="uid://y1e2lue8lhcv" path="res://assets/art/menues/client_title.png" id="1_kw5ia"]
[ext_resource type="Script" uid="uid://ck06jr47bkk7x" path="res://scripts/client_connect_menu.gd" id="1_q8ros"]
[ext_resource type="Theme" uid="uid://bnivdma6helc8" path="res://themes/UI_theme.tres" id="2_b7kwu"]
[ext_resource type="FontFile" uid="uid://2a2g1uljrr17" path="res://assets/Rock3D-Regular.ttf" id="3_b7kwu"]
[ext_resource type="PackedScene" uid="uid://dwgn6s513rplp" path="res://objects/character_select.tscn" id="4_4t3kg"]

[node name="ClientConnectMenu" type="CanvasLayer"]
script = ExtResource("1_q8ros")

[node name="NotConnected" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NotConnected"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kw5ia")

[node name="VBoxContainer" type="VBoxContainer" parent="NotConnected"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -154.0
offset_right = 450.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="ServerIP" type="TextEdit" parent="NotConnected/VBoxContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_b7kwu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_b7kwu")
theme_override_font_sizes/font_size = 35
text = "192.168.1.107"

[node name="Name" type="TextEdit" parent="NotConnected/VBoxContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_b7kwu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_b7kwu")
theme_override_font_sizes/font_size = 35
text = "Funky funk"

[node name="RoleSelector" type="OptionButton" parent="NotConnected/VBoxContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_b7kwu")
theme_override_fonts/font = ExtResource("3_b7kwu")
theme_override_font_sizes/font_size = 35
selected = 2
item_count = 3
popup/item_0/text = "Rebel"
popup/item_0/id = 0
popup/item_1/text = "Police"
popup/item_1/id = 1
popup/item_2/text = "Random"
popup/item_2/id = 2

[node name="ConnectButton" type="Button" parent="NotConnected"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.932292
anchor_top = 0.5
anchor_right = 0.932292
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -154.0
offset_bottom = 154.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_b7kwu")
theme_override_font_sizes/font_size = 50
text = "Connect"
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="NotConnected"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.651852
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 12.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="CharacterSelect" parent="NotConnected/HBoxContainer" instance=ExtResource("4_4t3kg")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CharacterSelect2" parent="NotConnected/HBoxContainer" instance=ExtResource("4_4t3kg")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CharacterSelect3" parent="NotConnected/HBoxContainer" instance=ExtResource("4_4t3kg")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CharacterSelect4" parent="NotConnected/HBoxContainer" instance=ExtResource("4_4t3kg")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Connected" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(800, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -150.0
offset_right = 84.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisconnectButton" type="Button" parent="Connected"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_b7kwu")
text = "Disconnect"

[node name="StartGameButton" type="Button" parent="Connected"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_b7kwu")
text = "Start Game!"

[connection signal="pressed" from="NotConnected/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="Connected/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
[connection signal="pressed" from="Connected/StartGameButton" to="." method="_on_start_game_button_pressed"]
